--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-style: normal;
     font-weight: normal;
     font-display: swap;
-    src: url('/assets/fonts/young-serif/youngserif-regular.ttf')
+    src: url('./assets/fonts/young-serif/youngserif-regular.ttf')
         format('truetype');
 }
 
@@ -12,7 +12,7 @@
     font-style: normal;
     font-display: swap;
     font-weight: 400 700;
-    src: url('/assets/fonts/outfit/Outfit-VariableFont_wght.ttf')
+    src: url('./assets/fonts/outfit/Outfit-VariableFont_wght.ttf')
         format('truetype');
 }
 
